Fixed user-functions spacing from last commit, lol

--- a/app/assets/stylesheets/application.css.styl
+++ b/app/assets/stylesheets/application.css.styl
@@ -60,13 +60,13 @@ h1 {
     content:"";
     height: 30px;
     position: absolute;
-    right: 182px;
+    right: 177px;
     width: 1px;
   }
   &:after {
     background2();
     top: 8px;
-    right: 181px;
+    right: 176px;
   }
 }
 .wrapper {
@@ -93,6 +93,10 @@ h1 {
   vertical-align: middle;
   width: 300px;
 }
+.user-functions .profile-image,
+.user-functions .primary {
+    margin-right: 10px;
+}
 .user-functions .profile-image {
   border: 2px solid #282828;
   border-radius: 0;
@@ -102,7 +106,7 @@ h1 {
 }
 .user-functions a {
   left: 2px;
-  margin-left: 20px;
+  margin-left: 4px;
   text-transform: lowercase;
   &:hover {
     color: #fff;
@@ -113,7 +117,7 @@ h1 {
   border-radius: 4px;
   box-shadow:
     inset 0px 1px 0px 0px rgba(255,255,255,0.3),
-    inset 0px -30px 40px -20px rgba(0,0,0,0.5),
+    inset 0px -30px 40px -20px rgba(0,0,0,0.6),
     inset 0px 0px 3px 0px rgba(255,255,255,0.3),
     0px 0px 0px 1px rgba(0,0,0,0.1),
     0px -1px 0px 0px rgba(0,0,0,0.2),
@@ -122,6 +126,7 @@ h1 {
   color: #FFF;
   cursor: pointer;
   display: inline-block;
+  margin-right: 18px;
   padding: 7px 11px 9px 11px;
   text-shadow: 0px 1px 2px rgba(0,0,0,0.5);
   top: -6px;
